# selector_schema_codegen

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_DEV.md  README_RU.md  RUST_REWRITE.md  SYSTEM_PROMPT.md  TODO_EXTEND_SYNTAX.MD  TODO_LINTER.md  TODO_REST_API.MD  demo.py  example.yaml  hatch_build.py  llm.md  llm.txt  main.py  main_kdl_test.py  parser.py  pyproject.toml  restApiLike.py  t.py  t_t.js  t_t.py
.github/workflows/: build-kdl.yml  ci.yml  publish.yml
docs/: README.md  ast_reference.md  brief.md  briefing.md  explain.md  features.md  generator.puml  guide.md  imp_converters.md  index.md  linter_extensions.md  llm.txt  nodes.md  operations.md  ops.md  predicates.md  quickstart.md  reference.md  schama_strict.puml  syntax.md  transforms.md  tutorial.md  types.md
docs/learn/: 01-generation.md  02-fields.md  03-check.md  04-run.md  05-health.md  06-recipes.md  07-define.md  08-extensions.md  09-imports.md  10-request.md  overview.md
docs/maintainers/: converters.md  linter.md
docs/vhs_tapes/: parse_from_file.tape  parse_from_url.tape
docs2/: imp_converters.md  nodes.md  ops.md  syntax.md
example/: README.md  booksToScrape.py  books_to_scrape.py  example.yaml  main.py  schema.py
example/parsers/: baseStruct.py  booksToScrape.py
example/py/: main.py
examples/: README.md  booksToScrape.kdl  booksToScrape.py  books_schema.yaml  expressions.py  filters.py  generate_code.sh  hackernews.kdl  imdbcom.kdl  main.py  manual_make.py  metaExtractorCss3.kdl  metaExtractorCss4.kdl  quotesToScrape.kdl  schemas_examples.py  test.dart  test.py  transformExample.kdl  validation.py
examples/1_basic/: main.py  parser_schema.py
examples/2_string_operations/: index.html  main.py  parser_schema.py
examples/3_default_values/: main.py  parser_schema.py
examples/4_validation/: parser_schema.py  schema.py
examples/5_schema_types/: index.html  parser_schema.py  schema.py
examples/6_nested_schemas/: index.html  parser_schema.py
examples/7_json_extract/: parser_schema.py  raw_json.json  template_json_schema.py
examples/acc_unique_list/: parser_schema.js  parser_schema.py  schema.py
examples/booksToScrape/: README.md  generate_code.sh  manual_make.py  runtime_compile.py
examples/books_toscrape/: books_schema.yaml
examples/dart/: booksToScrape.dart
examples/doc/: bs4_schema.py  go_schema.go  js_schema.js  parsel_schema.py  schema.js  slax_schema.py
examples/dslCoverage/: 00_full.kdl
examples/filters/: schema.py
examples/go/: booksToScrape.go
examples/helloWorld/: generate.sh  parser_schema.js  parser_schema.py  schema.js  schema.py
examples/js/: booksToScrape.js  main.js
examples/multi_attrs/: schema.py
examples/parsers/: baseStruct.py  booksToScrape.py
examples/pipeline_usage/: main.py  parser_schema.py  schema.py
examples/python/: booksToScrape.py  main.py
examples/quotesToScrapeJs/: index.html  main.py  parser_schema.py  schema.py
examples/real_projects/: README.md  hackernews.py  imdb_com.py  socials_parser.py  universal_meta_extractor.py  universal_meta_extractor_css3.py
examples/runtime_compile/: manual_make.py  runtime_compile.py
examples/schemas/: booksToScrape.py
examples/ssc_imports_struct/: body.py  header.py  main.py
examples/transform/: custom_transforms.py  main.py
examples/tutorial/: main.py  readme.md  schema3.py  schema4.py
examples2/: booksToScrape.kdl  hackernews.kdl  imdbcom.kdl  metaExtractorCss3.kdl  metaExtractorCss4.kdl  quotesToScrape.kdl  socialsExtractor.kdl  transformExample.kdl
scripts/: build_kdl.py  check.sh  fix.sh  ver_patch.sh  version.py
src/: analyzer.py  base_codegen.py  codegen_tools.py  lexer.py  objects.py  parser.py  template_utils.py  tools.py  yaml_parser.py
src/configs/: codegen_tools.py  python_bs4.py  (+2 more)
ssc_codegen/: __init__.py  _cli.py  _compat.py  _logging.py  analyzer.py  ast_build_utils.py  ast_builder.py  ast_ssc.py  cdp_min.py  cli.py  cli_utils.py  compiler.py  consts.py  document.py  document_utils.py  document_utlis.py  exceptions.py  expression.py  generator.py  health.py  json_struct.py  json_to_scc.py  kdl2_cst_poc.py  lexer.py  logs.py  main.py  objects.py  parser.py  pseudo_selectors.py  queries.py  regex_utils.py  render.py  repl.py  schema.py  schemas.py  selector_utils.py  str_utils.py  structs.py  template.py  template_utils.py  (+6 more)
ssc_codegen2/: _compat.py  cli.py  expression.py  tokens.py  type_state.py
test_dart/: pubspec.yaml
tests/: books_parser.py  config.py  demo.html  fixtures.py  generate.py  test_bs4.py  test_css_to_xpath.py  test_document_array.py  test_document_assert.py  test_document_invalid_expr.py  test_document_regex.py  test_document_select.py  test_document_text.py  test_go_converter.py  test_imports.py  test_invalid_expr.py  test_kdl_parser.py  test_nested.py  test_openapi.py  test_parsel.py  test_parsel_xpath_auto.py  test_parser.py  test_py_schemas.py  test_rest_api.py  test_scrapy.py  test_slax.py
(+440 files in other folders)
