[project]
name = "selector-schema-codegen"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cssselect>=1.2.0",
    "lxml>=5.3.0",
    "typer>=0.15.1",
]

[project.urls]
Documentation = "https://github.com/vypivshiy/selector_schema_codegen#readme"
Issues = "https://github.com/vypivshiy/selector_schema_codegen/issues"
Source = "https://github.com/vypivshiy/selector_schema_codegen"
Examples = "https://github.com/vypivshiy/selector_schema_codegen/examples"


[project.scripts]
ssc-gen = 'ssc_codegen.cli:main'

[tool.setuptools]
packages=["ssc_codegen"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
# python generated code tests
tests = [
    "bs4>=0.0.2",
    "parsel>=1.10.0",
    "pytest>=8.3.4",
    "selectolax>=0.3.27",
]

[tool.ruff]
target-version = "py310"
line-length = 80
exclude = ["__init__.py"]

[tool.mypy]
python_version = "3.10"
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
mypy_path = 'ssc_codegen'
exclude = [
    "converters/.*\\.py$",  # to tired typing
    "examples/.*\\.py$"
]
[[tool.mypy.overrides]]
module="tests.*"
disallow_untyped_defs = false
