[project]
name = "ssc_codegen"
version = "0.7.4"
description = "Python-dsl code converter to html parser for web scraping "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cssselect>=1.2.0",
    "httpx>=0.28.1",
    "ichrome>=4.0.4",
    "lxml>=5.3.0",
    "parsel>=1.10.0",
    "typer>=0.15.1",
    "typing_extensions;python_version<'3.11'",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[project.urls]
Documentation = "https://github.com/vypivshiy/selector_schema_codegen#readme"
Issues = "https://github.com/vypivshiy/selector_schema_codegen/issues"
Source = "https://github.com/vypivshiy/selector_schema_codegen"
Examples = "https://github.com/vypivshiy/selector_schema_codegen/examples"


[project.scripts]
ssc-gen = 'ssc_codegen.cli.main:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ssc_codegen/*",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "httpx>=0.28.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
# python generated code tests
tests = [
    "bs4>=0.0.2",
    "parsel>=1.10.0",
    "selectolax>=0.3.27",
]

[tool.ruff]
target-version = "py310"
line-length = 80
exclude = ["__init__.py"]

[tool.mypy]
python_version = "3.10"
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
mypy_path = 'ssc_codegen'
exclude = [
    "converters/.*\\.py$",  # to tired typing
    "examples/.*\\.py$"
]
[[tool.mypy.overrides]]
module="tests.*"
disallow_untyped_defs = false
